<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondologinpage"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/jua"
        android:text="@string/registrarse_y"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/jua"
        android:text="@string/empezar_a_transferir"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="395dp"
        android:layout_height="440dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/jua"
            android:text="@string/nombre"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:fontFamily="@font/jua"
            android:hint="@string/ingresar_nombre"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/jua"
            android:text="@string/apellido"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText2"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:fontFamily="@font/jua"
            android:hint="@string/apellido1"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/jua"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText3"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:fontFamily="@font/jua"
            android:hint="@string/ingresar_email"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/jua"
            android:text="@string/contrase_a"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/grey"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/jua"
                android:hint="@string/contraseña_nueva" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/jua"
            android:text="@string/reingresar_contrase_a"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:textColorHint="@color/grey"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/grey"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/jua"
                android:hint="@string/reingresar_contrase_a" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="281dp"
        android:layout_height="57dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="19dp"
        android:text="@string/crear_cuenta"
        android:fontFamily="@font/jua"
        android:backgroundTint="#63B2F1"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="64dp"
        android:textColor="#63B2F1"
        android:fontFamily="@font/jua"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/ya_tienes_una_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>