<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/fondologinpage"
    app:circularflow_radiusInDP="20"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/jua"
        android:text="@string/loguea_y_empeza_a"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="217dp"
        android:fontFamily="@font/jua"
        android:text="@string/transferir"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/butonlogin"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="140dp"
        android:text="@string/login"
        android:fontFamily="@font/jua"
        android:backgroundTint="#63B2F1"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="102dp"
        android:fontFamily="@font/jua"
        android:text="@string/crear_una_nueva_cuenta"
        android:textColor="#74B7EC"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butonlogin" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="343dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/jua"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:fontFamily="@font/jua"
            android:hint="@string/ingresar_tu_email"
            android:inputType="text"
            android:textAlignment="gravity"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/jua"
            android:paddingTop="30dp"
            android:text="@string/contrase_a" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textColorHint="@color/grey"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/edit_text_border"
                android:fontFamily="@font/jua"
                android:hint="@string/ingress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/jua"
            android:gravity="right"
            android:text="@string/olvidaste_tu_contrase_a"
            android:textColor="#74B7EC"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>