<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondologin"
    tools:context=".Login">

    <TextView
        android:id="@+id/marca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="517dp"
        android:fontFamily="@font/jua"
        android:gravity="center"
        android:paddingTop="24dp"
        android:text="@string/alkewallet"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="156dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/marca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector" />

    <TextView
        android:id="@+id/lugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="181dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/jua"
        android:text="@string/el_lugar_m_s_seguro_para_tu_dinero"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Crear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marca" />

    <Button
        android:id="@+id/Crear"
        android:layout_width="325dp"
        android:layout_height="58dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#63B2F1"
        android:fontFamily="@font/jua"
        android:text="@string/crear_cuenta_nueva"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lugar" />

    <TextView
        android:id="@+id/ingresar"
        android:layout_width="115dp"
        android:layout_height="19dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="58dp"
        android:fontFamily="@font/jua"
        android:text="Ya tiene cuenta?"
        android:textColor="#74B3E4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Crear" />
</androidx.constraintlayout.widget.ConstraintLayout>